--- a/src/components/organisms/thanks-message/thanks.module.css
+++ b/src/components/organisms/thanks-message/thanks.module.css
@@ -42,15 +42,18 @@
     text-align: center;
     margin: 0 0 40px;
 }
-.thanksContainer button{
+.thanksContainer a{
     margin: 0 auto;
     display: block;
-    padding: 10px 20px;
+    padding: 10px 30px;
     border: 3px solid #ffc602;
     border-radius: 100px;
     background: transparent;
     font-size: 20px;
     font-weight: 500;
+    width: fit-content;
+    text-decoration: none;
+    color: black;
 }
 .likeButton{
     width: 110px;
