--- a/src/components/organisms/team/image-slider/imageslider.css
+++ b/src/components/organisms/team/image-slider/imageslider.css
@@ -66,3 +66,36 @@
     color: var(--bs-yellow);
     margin-left: -4px;
 }
+@media only screen and (max-width: 1360px) {
+    .slick-slider{
+        padding: 50px 0px;
+    }
+}
+@media only screen and (max-width: 1240px) {
+    .slick-prev{
+        left: 50px;
+    }
+    .slick-next{
+        right: 50px;
+    }
+    .slick-slide img{
+        width: 100%;
+    }
+    
+}
+@media only screen and (max-width: 767px) {
+    .slick-prev:before, .slick-next:before {
+        font-size: 30px;
+    }
+    .slick-prev {
+        left: 10px;
+        width: 30px;
+        height: 30px;
+    }
+    .slick-next {
+        right: 10px;
+        width: 30px;
+        height: 30px;
+        box-shadow: none;
+    }
+}
