--- a/src/components/organisms/zamow/zamow-hero/zamow-hero.css
+++ b/src/components/organisms/zamow/zamow-hero/zamow-hero.css
@@ -4,11 +4,13 @@
   line-height: 60px;
   margin: 0 0 40px;
 }
+
 .zamow-hero.col {
-  max-width: 900px;
+  max-width: 850px;
   margin: 0 auto;
   padding: 70px 0px 30px;
 }
+
 .zamow-hero p {
   line-height: 1.4;
   font-weight: 300;
@@ -56,6 +58,7 @@
   border: 2px solid #981a05;
   box-shadow: 0 0 0 0 #981a05, 0 4px 0 0 #981a05;
 }
+
 .zamow-hero-btn:hover {
   box-shadow: 0 2px 0 0 #981a05;
 }
@@ -87,21 +90,38 @@
 
 .progress-bar {
   height: 100%;
-  background: linear-gradient(
-    90deg,
-    rgb(249, 146, 23) 0%,
-    rgb(249, 54, 0) 100%
-  );
+  background: linear-gradient(90deg,
+      rgb(249, 146, 23) 0%,
+      rgb(249, 54, 0) 100%);
 }
-@media only screen and (max-width: 767px){
+
+.back-button {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: none;
+  border: none;
+  color: white;
+  padding-left: 12px;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 767px) {
   .zamow-hero h1 {
-    font-size: 50px;
+    font-size: 40px;
+    line-height: 50px;
 }
-.zamow-hero p {
-  font-size: 24px;
-}
-.input-container {
-  margin-top: 50px;
-  margin-bottom: 50px;
+
+  .zamow-hero p {
+    font-size: 24px;
+  }
+
+  .input-container {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  .zamow-hero-btn {
+    position: static;
+    margin: 20px 0 0;
 }
 }
