--- a/src/components/organisms/footer/footer.module.css
+++ b/src/components/organisms/footer/footer.module.css
@@ -101,7 +101,7 @@
         border: 1px solid red !important;
         padding: 10px 20px;
         border-radius: 100px;
-        color: red;
+        color: red !important;
     }
     .mobileRightMenu{
         text-align: right;
